<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="0dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/intitule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intitule"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/contexte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contexte"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp" />

</LinearLayout>